--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
     </header>
     <main>
         <section class="hero vh-100 ">
-
+            <div class="container d-flex align-items-center h-100">
+                <div class="hero-content">
+                    <h1 class="text-white fw-bolder fs-1">Robin Steel</h1>
+                    <p class="text-white mb-4">Developer, Graphics & Web Design</p>
+                    <a href="#" class="text-decoration-none">View Portfolio</a>
+                </div>
+            </div>
         </section>
     </main>
     
