--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
                 </div>
             </div>
         </section>
+        <section class="about  p-5 vh-100">
+            <div class="title text-center">
+                <h2 class="fs-1 fw-bolder text-uppercase">About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            
+            <div class="container">
+                <div class="row">
+
+                    <div class="image-about col-md-4">
+                        <img src="./assets/image/about/about.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="about-content  col-md-7 offset-1 d-flex flex-column justify-content-center">
+                        <h3>Robin Steel</h3>
+                        <h4 class="text__maincolor">Creative UI/UX Designer, Developer.</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>E-mail: <a href="mailto:info@yourdomain.com" class="text-black fw-bold">info@yourdomain.com</a> </p>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
     </main>
     
     <script
