create Testimonials section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <nav class="navbar navbar-expand-lg bg-black position-fixed w-100">
+        <nav class="navbar navbar-expand-lg bg-black position-fixed z-1 w-100">
             <div class="container-fluid">
                 <a class="navbar-brand text-uppercase fw-bolder" href="#">Osaka</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -98,7 +98,7 @@
         <section class="portfolio py-5">
             <div class="title text-center">
                 <h2 class="fs-1 fw-bolder text-uppercase">Portfolio</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p class="mb-5 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <ul class="nav nav-tabs justify-content-center mb-5" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -221,6 +221,59 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="Testimonials p-5 ">
+ <div class="title text-center">
+                <h2 class="fs-1 fw-bolder text-uppercase">Testimonials</h2>
+                <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="container">
+ <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel" data-bs-ride="true" >
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"  aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"  aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"  aria-label="Slide 5"></button>
+  </div>
+  <div class="carousel-inner text-center item ">
+    <div class="carousel-item active py-5 overflow-visible " data-bs-interval="2000">
+      <img src="./assets/image/Testimonials/olivia nealson.jpg" class="d-block m-auto " alt="...">
+      <h2 class="fs-4">olivia nealson</h2>
+      <h3 class="text-muted fs-5">Web Designer</h3>
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui veniam, eum quo nostrum molestias sapiente? Delectus quidem ducimus impedit, libero vitae sequi labore accusamus vel quasi officia consequatur </p>
+    </div>
+    <div class="carousel-item  py-5" data-bs-interval="2000">
+      <img src="./assets/image/Testimonials/maxwell.jpg" class="d-block m-auto" alt="...">
+      <h2 class="fs-4>Maxwell Deo</h2>
+      <h3 class="text-muted fs-5">graphics Designer</h3>
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui veniam, eum quo nostrum molestias sapiente? Delectus quidem ducimus impedit, libero vitae sequi labore accusamus vel quasi officia consequatur </p>
+    </div>
+    <div class="carousel-item py-5" data-bs-interval="2000">
+      <img src="./assets/image/Testimonials/robin.jpg" class="d-block m-auto" alt="...">
+      <h2 class="fs-4>Robin Perty</h2>
+      <h3 class="text-muted fs-5">Senior Designer</h3>
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui veniam, eum quo nostrum molestias sapiente? Delectus quidem ducimus impedit, libero vitae sequi labore accusamus vel quasi officia consequatur </p>
+    </div>
+    <div class="carousel-item py-5" data-bs-interval="2000">
+      <img src="./assets/image/Testimonials/emilie.jpg" class="d-block m-auto" alt="...">
+      <h2 class="fs-4>Emilie Chapin</h2>
+      <h3 class="text-muted fs-5">graphics Designer</h3>
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui veniam, eum quo nostrum molestias sapiente? Delectus quidem ducimus impedit, libero vitae sequi labore accusamus vel quasi officia consequatur </p>
+    </div>
+    <div class="carousel-item py-5" data-bs-interval="2000">
+      <img src="./assets/image/Testimonials/adrian hassoon.jpg" class="d-block m-auto " alt="...">
+      <h2 class="fs-4>Adrian Hassoon</h2>
+      <h3 class="text-muted fs-5">Web Designer</h3>
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui veniam, eum quo nostrum molestias sapiente? Delectus quidem ducimus impedit, libero vitae sequi labore accusamus vel quasi officia consequatur </p>
+    </div>
+  </div>
+  
+</div>
+    </div>
+  </div>
+  
         </section>
     </main>
 
